objects/CS002_FIeldsIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldId__c</fullName>
        <label>FieldId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>ObjectApiName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CS002_FIeldsIds</label>
    <listViews>
        <fullName>lat_error_ar</fullName>
        <columns>NAME</columns>
        <columns>FieldApiName__c</columns>
        <columns>FieldId__c</columns>
        <columns>ObjectApiName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectApiName__c</field>
            <operation>equals</operation>
            <value>VLS_Values_ARG__c</value>
        </filters>
        <label>lat - error ar</label>
        <language>en_US</language>
    </listViews>
</CustomObject>